examples/test/testpolicy1262.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1262
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key49: value44
      key3: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value46
          key12: value13
          key15: value6
      podSelector:
        matchLabels:
          key18: value23
          key24: value10
          key11: value21
